{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 124,
  "lineage": "3a69ff2a-373c-0837-a30c-177f06d90620",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT-Gateway-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0297d49a3a0c34b43",
            "association_id": "eipassoc-07ea07b5c7e5e90cc",
            "domain": "vpc",
            "id": "eipalloc-0297d49a3a0c34b43",
            "network_border_group": "us-east-1",
            "network_interface": "eni-013370a086d99ba62",
            "private_dns": "ip-10-0-2-108.ec2.internal",
            "private_ip": "10.0.2.108",
            "public_dns": "ec2-98-87-206-134.compute-1.amazonaws.com",
            "public_ip": "98.87.206.134",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.P1_IG",
            "aws_route_table.public_RT",
            "aws_route_table_association.public_subnet_asso",
            "aws_subnet.public_webtier_subnet",
            "aws_vpc.P1-3-tier-archi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion-host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0360c520857e3138f",
            "arn": "arn:aws:ec2:us-east-1:843756394080:instance/i-0a762015f82a332fe",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a762015f82a332fe",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "P1 4tier archi keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ef50f0234c028d9b",
            "private_dns": "ip-10-0-1-36.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.36",
            "public_dns": "ec2-54-242-85-44.compute-1.amazonaws.com",
            "public_ip": "54.242.85.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08822be9f9cca2be5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0d2317503b826dbb9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-051d96d900f947f84",
            "tags": {
              "Name": "Bastion Host"
            },
            "tags_all": {
              "Name": "Bastion Host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d2317503b826dbb9"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.P1_3tier_archi_keypair",
            "aws_security_group.bastion-host-sg",
            "aws_subnet.public_webtier_subnet",
            "aws_vpc.P1-3-tier-archi",
            "tls_private_key.P1_keypair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "P1_IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843756394080:internet-gateway/igw-09de0d69dfddcc13c",
            "id": "igw-09de0d69dfddcc13c",
            "owner_id": "843756394080",
            "tags": {
              "Name": "P1_internet_gateway"
            },
            "tags_all": {
              "Name": "P1_internet_gateway"
            },
            "vpc_id": "vpc-0f2c43e99c6289ba4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.P1-3-tier-archi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "apptier-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:843756394080:loadbalancer/app/Apptier-LB/ad66e81d802ff8f6",
            "arn_suffix": "app/Apptier-LB/ad66e81d802ff8f6",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-Apptier-LB-1391294505.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:843756394080:loadbalancer/app/Apptier-LB/ad66e81d802ff8f6",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Apptier-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07d9e78021a131858"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0226f89cccd1ed731"
              },
              {
                "subnet_id": "subnet-05727c2d83188788e"
              }
            ],
            "subnets": [
              "subnet-0226f89cccd1ed731",
              "subnet-05727c2d83188788e"
            ],
            "vpc_id": "vpc-0f2c43e99c6289ba4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.apptier-alb-sg",
            "aws_security_group.webtier-alb-sg",
            "aws_security_group.webtier-sg",
            "aws_subnet.private_apptier_subnet",
            "aws_vpc.P1-3-tier-archi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "webtier-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:843756394080:loadbalancer/app/Webtier-LB/5c0ae0ea542d93f8",
            "arn_suffix": "app/Webtier-LB/5c0ae0ea542d93f8",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Webtier-LB-1226064909.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:843756394080:loadbalancer/app/Webtier-LB/5c0ae0ea542d93f8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Webtier-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-028516da4739284cc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-051d96d900f947f84"
              },
              {
                "subnet_id": "subnet-060ae2d7d505d8b7a"
              }
            ],
            "subnets": [
              "subnet-051d96d900f947f84",
              "subnet-060ae2d7d505d8b7a"
            ],
            "vpc_id": "vpc-0f2c43e99c6289ba4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.webtier-alb-sg",
            "aws_subnet.public_webtier_subnet",
            "aws_vpc.P1-3-tier-archi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "apptier-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:843756394080:listener/app/Apptier-LB/ad66e81d802ff8f6/dd74d00cde14039c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:843756394080:targetgroup/Apptier-ALB-TG/96617d2a01d58a13",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:843756394080:listener/app/Apptier-LB/ad66e81d802ff8f6/dd74d00cde14039c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:843756394080:loadbalancer/app/Apptier-LB/ad66e81d802ff8f6",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.apptier-alb",
            "aws_lb_target_group.apptier-alb-tg",
            "aws_security_group.apptier-alb-sg",
            "aws_security_group.webtier-alb-sg",
            "aws_security_group.webtier-sg",
            "aws_subnet.private_apptier_subnet",
            "aws_vpc.P1-3-tier-archi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "webtier-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:843756394080:listener/app/Webtier-LB/5c0ae0ea542d93f8/65c6862af2b296dd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:843756394080:targetgroup/Webtier-ALB-TG/a8d5e419ee1280fe",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:843756394080:listener/app/Webtier-LB/5c0ae0ea542d93f8/65c6862af2b296dd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:843756394080:loadbalancer/app/Webtier-LB/5c0ae0ea542d93f8",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.webtier-alb",
            "aws_lb_target_group.webtier-alb-tg",
            "aws_security_group.webtier-alb-sg",
            "aws_subnet.public_webtier_subnet",
            "aws_vpc.P1-3-tier-archi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "apptier-alb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:843756394080:targetgroup/Apptier-ALB-TG/96617d2a01d58a13",
            "arn_suffix": "targetgroup/Apptier-ALB-TG/96617d2a01d58a13",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:843756394080:targetgroup/Apptier-ALB-TG/96617d2a01d58a13",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Apptier-ALB-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f2c43e99c6289ba4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.P1-3-tier-archi"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "webtier-alb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:843756394080:targetgroup/Webtier-ALB-TG/a8d5e419ee1280fe",
            "arn_suffix": "targetgroup/Webtier-ALB-TG/a8d5e419ee1280fe",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:843756394080:targetgroup/Webtier-ALB-TG/a8d5e419ee1280fe",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Webtier-ALB-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f2c43e99c6289ba4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.P1-3-tier-archi"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Private_NAT_GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0297d49a3a0c34b43",
            "connectivity_type": "public",
            "id": "nat-0fc096226f933aa3f",
            "network_interface_id": "eni-013370a086d99ba62",
            "private_ip": "10.0.2.108",
            "public_ip": "98.87.206.134",
            "subnet_id": "subnet-060ae2d7d505d8b7a",
            "tags": {
              "Name": "P1_NAT_Gateway"
            },
            "tags_all": {
              "Name": "P1_NAT_Gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.NAT-Gateway-EIP",
            "aws_internet_gateway.P1_IG",
            "aws_route_table.public_RT",
            "aws_route_table_association.public_subnet_asso",
            "aws_subnet.public_webtier_subnet",
            "aws_vpc.P1-3-tier-archi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "NAT-Gateway-RT-Apptier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843756394080:route-table/rtb-008140d5f3ab34cc8",
            "id": "rtb-008140d5f3ab34cc8",
            "owner_id": "843756394080",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fc096226f933aa3f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for NAT Gateway App tier"
            },
            "tags_all": {
              "Name": "Route Table for NAT Gateway App tier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f2c43e99c6289ba4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.NAT-Gateway-EIP",
            "aws_internet_gateway.P1_IG",
            "aws_nat_gateway.Private_NAT_GW",
            "aws_route_table.public_RT",
            "aws_route_table_association.public_subnet_asso",
            "aws_subnet.public_webtier_subnet",
            "aws_vpc.P1-3-tier-archi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "NAT-Gateway-RT-Database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843756394080:route-table/rtb-0fe757060b7eea75c",
            "id": "rtb-0fe757060b7eea75c",
            "owner_id": "843756394080",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fc096226f933aa3f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for NAT Gateway Database"
            },
            "tags_all": {
              "Name": "Route Table for NAT Gateway Database"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f2c43e99c6289ba4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.NAT-Gateway-EIP",
            "aws_internet_gateway.P1_IG",
            "aws_nat_gateway.Private_NAT_GW",
            "aws_route_table.public_RT",
            "aws_route_table_association.public_subnet_asso",
            "aws_subnet.public_webtier_subnet",
            "aws_vpc.P1-3-tier-archi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843756394080:route-table/rtb-079edfebd71e48e02",
            "id": "rtb-079edfebd71e48e02",
            "owner_id": "843756394080",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09de0d69dfddcc13c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f2c43e99c6289ba4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.P1_IG",
            "aws_vpc.P1-3-tier-archi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Nat-Gateway-RT-Association-Apptier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04fb79656070811b1",
            "route_table_id": "rtb-008140d5f3ab34cc8",
            "subnet_id": "subnet-0226f89cccd1ed731"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.NAT-Gateway-EIP",
            "aws_internet_gateway.P1_IG",
            "aws_nat_gateway.Private_NAT_GW",
            "aws_route_table.NAT-Gateway-RT-Apptier",
            "aws_route_table.public_RT",
            "aws_route_table_association.public_subnet_asso",
            "aws_subnet.private_apptier_subnet",
            "aws_subnet.public_webtier_subnet",
            "aws_vpc.P1-3-tier-archi"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d44466310633202",
            "route_table_id": "rtb-008140d5f3ab34cc8",
            "subnet_id": "subnet-05727c2d83188788e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.NAT-Gateway-EIP",
            "aws_internet_gateway.P1_IG",
            "aws_nat_gateway.Private_NAT_GW",
            "aws_route_table.NAT-Gateway-RT-Apptier",
            "aws_route_table.public_RT",
            "aws_route_table_association.public_subnet_asso",
            "aws_subnet.private_apptier_subnet",
            "aws_subnet.public_webtier_subnet",
            "aws_vpc.P1-3-tier-archi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Nat-Gateway-RT-Association-Database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eefed82cfc6f7205",
            "route_table_id": "rtb-0fe757060b7eea75c",
            "subnet_id": "subnet-0d9c0cf318f6433f8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.NAT-Gateway-EIP",
            "aws_internet_gateway.P1_IG",
            "aws_nat_gateway.Private_NAT_GW",
            "aws_route_table.NAT-Gateway-RT-Database",
            "aws_route_table.public_RT",
            "aws_route_table_association.public_subnet_asso",
            "aws_subnet.private_database_subnet",
            "aws_subnet.public_webtier_subnet",
            "aws_vpc.P1-3-tier-archi"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1f33c8912d19d9a",
            "route_table_id": "rtb-0fe757060b7eea75c",
            "subnet_id": "subnet-0a6c7fc56470d6f66"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.NAT-Gateway-EIP",
            "aws_internet_gateway.P1_IG",
            "aws_nat_gateway.Private_NAT_GW",
            "aws_route_table.NAT-Gateway-RT-Database",
            "aws_route_table.public_RT",
            "aws_route_table_association.public_subnet_asso",
            "aws_subnet.private_database_subnet",
            "aws_subnet.public_webtier_subnet",
            "aws_vpc.P1-3-tier-archi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0326d2ae0c7d5e4aa",
            "route_table_id": "rtb-079edfebd71e48e02",
            "subnet_id": "subnet-051d96d900f947f84"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.P1_IG",
            "aws_route_table.public_RT",
            "aws_subnet.public_webtier_subnet",
            "aws_vpc.P1-3-tier-archi"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de9a341ae0aaaef5",
            "route_table_id": "rtb-079edfebd71e48e02",
            "subnet_id": "subnet-060ae2d7d505d8b7a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.P1_IG",
            "aws_route_table.public_RT",
            "aws_subnet.public_webtier_subnet",
            "aws_vpc.P1-3-tier-archi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "apptier-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843756394080:security-group/sg-07d9e78021a131858",
            "description": "Allow HTTP and HTTPS from webtier",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d9e78021a131858",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0727d75ce7f7a0f6f"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0727d75ce7f7a0f6f"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Apptier-ALB-SG",
            "name_prefix": "",
            "owner_id": "843756394080",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Apptier-ALB-SG"
            },
            "tags_all": {
              "Name": "Apptier-ALB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f2c43e99c6289ba4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.webtier-alb-sg",
            "aws_security_group.webtier-sg",
            "aws_vpc.P1-3-tier-archi"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "apptier-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843756394080:security-group/sg-05da4a657d3e4bb02",
            "description": "Allow inbound traffic from apptier ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05da4a657d3e4bb02",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ssh from bastion host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d2317503b826dbb9"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic from apptier alb",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-07d9e78021a131858"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Apptier-SG",
            "name_prefix": "",
            "owner_id": "843756394080",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Apptier-SG"
            },
            "tags_all": {
              "Name": "Apptier-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f2c43e99c6289ba4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.apptier-alb-sg",
            "aws_security_group.bastion-host-sg",
            "aws_security_group.webtier-alb-sg",
            "aws_security_group.webtier-sg",
            "aws_vpc.P1-3-tier-archi"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-host-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843756394080:security-group/sg-0d2317503b826dbb9",
            "description": "Allow Bastion host to ssh to App tier",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d2317503b826dbb9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from anywhere ",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Bastion-SG",
            "name_prefix": "",
            "owner_id": "843756394080",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion-SG"
            },
            "tags_all": {
              "Name": "Bastion-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f2c43e99c6289ba4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.P1-3-tier-archi"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843756394080:security-group/sg-01352b9307d98c0c9",
            "description": "Allow inbound traffic from apptier ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01352b9307d98c0c9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow mysql from apptier",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05da4a657d3e4bb02"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Database-SG",
            "name_prefix": "",
            "owner_id": "843756394080",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Database-SG"
            },
            "tags_all": {
              "Name": "Database-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f2c43e99c6289ba4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.apptier-alb-sg",
            "aws_security_group.apptier-sg",
            "aws_security_group.bastion-host-sg",
            "aws_security_group.webtier-alb-sg",
            "aws_security_group.webtier-sg",
            "aws_vpc.P1-3-tier-archi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webtier-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843756394080:security-group/sg-028516da4739284cc",
            "description": "Allow HTTP and HTTPS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-028516da4739284cc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Webtier-ALB-SG",
            "name_prefix": "",
            "owner_id": "843756394080",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Webtier-ALB-SG"
            },
            "tags_all": {
              "Name": "Webtier-ALB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f2c43e99c6289ba4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.P1-3-tier-archi"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webtier-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843756394080:security-group/sg-0727d75ce7f7a0f6f",
            "description": "Allow inbound traffic from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0727d75ce7f7a0f6f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh for stress test ",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic from Web tier ALB",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-028516da4739284cc"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Webtier-SG",
            "name_prefix": "",
            "owner_id": "843756394080",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Webtier-SG"
            },
            "tags_all": {
              "Name": "Webtier-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f2c43e99c6289ba4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.webtier-alb-sg",
            "aws_vpc.P1-3-tier-archi"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_apptier_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843756394080:subnet/subnet-0226f89cccd1ed731",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0226f89cccd1ed731",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "843756394080",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Apptier Subnet 1"
            },
            "tags_all": {
              "Name": "Private Apptier Subnet 1"
            },
            "vpc_id": "vpc-0f2c43e99c6289ba4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.P1-3-tier-archi"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843756394080:subnet/subnet-05727c2d83188788e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05727c2d83188788e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "843756394080",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Apptier Subnet 2"
            },
            "tags_all": {
              "Name": "Private Apptier Subnet 2"
            },
            "vpc_id": "vpc-0f2c43e99c6289ba4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.P1-3-tier-archi"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_database_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843756394080:subnet/subnet-0d9c0cf318f6433f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9c0cf318f6433f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "843756394080",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Database Subnet 1"
            },
            "tags_all": {
              "Name": "Private Database Subnet 1"
            },
            "vpc_id": "vpc-0f2c43e99c6289ba4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.P1-3-tier-archi"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843756394080:subnet/subnet-0a6c7fc56470d6f66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6c7fc56470d6f66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "843756394080",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Database Subnet 2"
            },
            "tags_all": {
              "Name": "Private Database Subnet 2"
            },
            "vpc_id": "vpc-0f2c43e99c6289ba4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.P1-3-tier-archi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_webtier_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843756394080:subnet/subnet-051d96d900f947f84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051d96d900f947f84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "843756394080",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Webtier Subnet 1"
            },
            "tags_all": {
              "Name": "Public Webtier Subnet 1"
            },
            "vpc_id": "vpc-0f2c43e99c6289ba4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.P1-3-tier-archi"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843756394080:subnet/subnet-060ae2d7d505d8b7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060ae2d7d505d8b7a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "843756394080",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Webtier Subnet 2"
            },
            "tags_all": {
              "Name": "Public Webtier Subnet 2"
            },
            "vpc_id": "vpc-0f2c43e99c6289ba4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.P1-3-tier-archi"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "P1-3-tier-archi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843756394080:vpc/vpc-0f2c43e99c6289ba4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0659ebcc7bba6a054",
            "default_route_table_id": "rtb-04ddb43ac4ff0eb8f",
            "default_security_group_id": "sg-0a003901c99e4b260",
            "dhcp_options_id": "dopt-07f52d97b2987d6e0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f2c43e99c6289ba4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04ddb43ac4ff0eb8f",
            "owner_id": "843756394080",
            "tags": {
              "Name": "P1-3-tier-archi"
            },
            "tags_all": {
              "Name": "P1-3-tier-archi"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}